--- a/views/homepages/index-vote-checking-period.ejs
+++ b/views/homepages/index-vote-checking-period.ejs
@@ -32,7 +32,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3">ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
+        <h3 class="h3">BLOCKCHAIN-BASED VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
 
       <div class="content-main">
@@ -48,7 +48,7 @@
         </div>
         <div class="main-container">
           <p class="bigger-text">
-            Thank you for your patience! The vote checking period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> is currently underway. <br />
+            Thank you for your patience! The vote checking period for the <span class="election-name"><%= electionConfig.electionName %></span> is currently underway. <br />
             <br />
             To stay updated, please refer to the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
             <br />
