--- a/views/admin/system-edit-account.ejs
+++ b/views/admin/system-edit-account.ejs
@@ -31,79 +31,79 @@
             <h1 class="details">Account Details</h1>
             <br />
             <!-- The form now submits via AJAX -->
-            <div class="main-details">
-              <div class="main-details-info">
-                <form id="form-details">
-                  <div class="form-details-container">
-                    <label for="role">Role:</label>
-                    <input class="input" type="text" id="role" placeholder="Role" value="<%= loggedInAdmin.role %>" disabled readonly />
-                  </div>
-                  <div class="form-details-container">
-                    <label for="name">Name:</label>
-                    <input class="input" type="text" id="name" name="name" placeholder="Name" value="<%= loggedInAdmin.name %>" disabled />
-                  </div>
-                  <div class="form-details-container">
-                    <label for="admin-email">Email: </label>
-                    <input class="input" type="text" id="admin-email" name="email" placeholder="Email" value="<%= loggedInAdmin.email %>" disabled />
-                  </div>
-                  <!-- New Password Section (Updated) -->
-                  <div id="new-password-section" style="display: none;">
-                    <!-- Old Password Field -->
+              <div class="main-details">
+                <div class="main-details-info">
+                  <form id="form-details">
                     <div class="form-details-container">
-                      <label for="old-password">Old Password:</label>
-                      <div class="input div-input" style="position: relative;">
-                        <input class="input-in-div" type="password" id="old-password" name="oldPassword" placeholder="Old Password" disabled />
-                        <span class="toggle-password" onclick="togglePassword('old-password')" style="position: absolute;">
-                          <%- include('../partials/svg-toggle-password') %>
-                        </span>
+                      <label for="role">Role:</label>
+                      <input class="input" type="text" id="role" placeholder="Role" value="<%= loggedInAdmin.role %>" disabled readonly />
+                    </div>
+                    <div class="form-details-container">
+                      <label for="name">Name:</label>
+                      <input class="input" type="text" id="name" name="name" placeholder="Name" value="<%= loggedInAdmin.name %>" disabled />
+                    </div>
+                    <div class="form-details-container">
+                      <label for="admin-email">Email: </label>
+                      <input class="input" type="text" id="admin-email" name="email" placeholder="Email" value="<%= loggedInAdmin.email %>" disabled />
+                    </div>
+                    <!-- New Password Section (Updated) -->
+                    <div id="new-password-section" style="display: none;">
+                      <!-- Old Password Field -->
+                      <div class="form-details-container">
+                        <label for="old-password">Old Password:</label>
+                        <div class="div-input" style="position: relative;">
+                          <input class="input-in-div" type="password" id="old-password" name="oldPassword" placeholder="Old Password" disabled style="width: 100%; padding-right: 2rem;" />
+                          <span class="toggle-password" onclick="togglePassword('old-password')" style="position: absolute; right: 0.5rem; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <%- include('../partials/svg-toggle-password') %>
+                          </span>
+                        </div>
+                      </div>
+
+                      <!-- New Password Field -->
+                      <div class="form-details-container">
+                        <label for="new-password">New Password:</label>
+                        <div class="div-input" style="position: relative;">
+                          <input class="input-in-div" type="password" id="new-password" name="newPassword" placeholder="New Password" disabled style="width: 100%; padding-right: 2rem;" />
+                          <span class="toggle-password" onclick="togglePassword('new-password')" style="position: absolute; right: 0.5rem; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <%- include('../partials/svg-toggle-password') %>
+                          </span>
+                        </div>
+                      </div>
+
+                      <!-- Confirm New Password Field -->
+                      <div class="form-details-container">
+                        <label for="confirm-new-password">Confirm New Password:</label>
+                        <div class="div-input" style="position: relative;">
+                          <input class="input-in-div" type="password" id="confirm-new-password" placeholder="Confirm New Password" disabled style="width: 100%; padding-right: 2rem;" />
+                          <span class="toggle-password" onclick="togglePassword('confirm-new-password')" style="position: absolute; right: 0.5rem; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <%- include('../partials/svg-toggle-password') %>
+                          </span>
+                        </div>
                       </div>
                     </div>
 
-                    <!-- New Password Field -->
-                    <div class="form-details-container">
-                      <label for="new-password">New Password:</label>
-                      <div class="input div-input" style="position: relative;">
-                        <input class="input-in-div" type="password" id="new-password" name="newPassword" placeholder="New Password" disabled style="width: 100%; padding-right: 2rem;" />
-                        <span class="toggle-password" onclick="togglePassword('new-password')" style="position: absolute; right: 0.5rem; top: 50%; transform: translateY(-50%); cursor: pointer;">
-                          <%- include('../partials/svg-toggle-password') %>
-                        </span>
-                      </div>
+                    <!-- Hidden input to store the base64 encoded profile image -->
+                    <input type="hidden" name="img" id="img-hidden" value="<%= loggedInAdmin.img %>" />
+                    <br /> <br />
+                    <div class="buttons">
+                      <button type="button" id="button-edit">Edit</button>
+                      <button type="button" id="button-close" style="display: none">Close</button>
+                      <button type="submit" id="button-save" style="display: none">Save</button>
+
                     </div>
-
-                    <!-- Confirm New Password Field -->
-                    <div class="form-details-container">
-                      <label for="confirm-new-password">Confirm New Password:</label>
-                      <div class="input div-input" style="position: relative;">
-                        <input class="input-in-div" type="password" id="confirm-new-password" placeholder="Confirm New Password" disabled style="width: 100%; padding-right: 2rem;" />
-                        <span class="toggle-password" onclick="togglePassword('confirm-new-password')" style="position: absolute; right: 0.5rem; top: 50%; transform: translateY(-50%); cursor: pointer;">
-                          <%- include('../partials/svg-toggle-password') %>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Hidden input to store the base64 encoded profile image -->
-                  <input type="hidden" name="img" id="img-hidden" value="<%= loggedInAdmin.img %>" />
-                  <br /> <br />
-                  <div class="buttons">
-                    <button type="button" id="button-edit">Edit</button>
-                    <button type="button" id="button-close" style="display: none">Close</button>
-                    <button type="submit" id="button-save" style="display: none">Save</button>
-
-                  </div>
-                </form>
+                  </form>
+                </div>
+                <div class="main-details-profile">
+                  <img class="circle-img" id="img-admin" src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
+                  <br />
+                  <p class="bold"><span><%= loggedInAdmin.name %></span></p>
+                  <p><i><%= loggedInAdmin.role %></i></p>
+                  <br />
+                  <button id="change-image" style="display: none">Change Profile Image</button>
+                  <!-- Hidden file input for image upload -->
+                  <input type="file" class="input-file" id="input-file" style="display:none" />
+                </div>
               </div>
-              <div class="main-details-profile">
-                <img class="circle-img" id="img-admin" src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
-                <br />
-                <p class="bold"><span><%= loggedInAdmin.name %></span></p>
-                <p><i><%= loggedInAdmin.role %></i></p>
-                <br />
-                <button id="change-image" style="display: none">Change Profile Image</button>
-                <!-- Hidden file input for image upload -->
-                <input type="file" class="input-file" id="input-file" style="display:none" />
-              </div>
-            </div>
           </div>
         </div>
       </main>
