fixed voter turnout overflow

--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -80,7 +80,7 @@
           <br />
          
           
-              <div class="rvs-container"> <br /><%- include('../admin/shared-voter-turnout') %></div>
+              <div class="rvs-container" style="overflow-y: none;"> <br /><%- include('../admin/shared-voter-turnout') %></div>
             
           </div>
         </div>
