--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -318,7 +318,7 @@ h6 {
 .dropdown-menu {
   display: none;
   position: absolute;
-  background-color: #e1ae5b;
+  background-color: #f2ddb4;
   width: 15%;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
