--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -33,7 +33,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3">ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
+        <h3 class="h3">BLOCKCHAIN-BASED VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
 
       <div class="content-main">
@@ -46,7 +46,7 @@
         </div>
         <div class="main-container">
           <p class="bigger-text">
-            Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
+            Thank you for your participation! The election period for the <span class="election-name"><%= electionConfig.electionName %></span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
             <br />
             Alternatively, you can view and verify the results directly by clicking <a href="/rvs-about">here.</a>
           </p>
