--- a/views/about.ejs
+++ b/views/about.ejs
@@ -27,7 +27,7 @@
 
     <div class="content">
       <div class="content-title">
-        <h3>ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
+        <h3>BLOCKCHAIN-BASED VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
 
       <div class="content-main">
