added big popup for centered notif

--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -34,6 +34,8 @@
     </style>
   </head>
   <body>
+    <script src="/components/popup.js"></script>
+  
     <div id="popupContainer">
       <div class="popup-vote">
         <img src="components/popup-checkmark.png" class="popup-img" />
@@ -90,6 +92,8 @@
 
       <div class="header-bottom-line"></div>
     </header>
+
+
 
     <!-- Content Section -->
     <div class="content">
