--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/about.css" />
 
+    <!-- add mo to zari -->
+    <link rel="stylesheet" type="text/css" href="/components/popup-vote.css" />
+    <!-- add mo to zari -->
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
@@ -26,6 +30,27 @@
     </header>
 
     <div class="content">
+      <link rel="stylesheet" type="text/css" href="/components/popup-vote.css" />
+
+      <!-- add mo to zari -->
+      <script src="/components/popup.js"></script>
+
+      <script>
+        bigPopup(
+          "VOTING CLOSED",
+          "You have already cast your vote.",
+          {
+            imageSrc: "/components/popup-checkmark.png",
+            buttonText: "Dismiss",
+            timeout: 7000
+          }
+        );
+
+      </script>
+      <!-- add mo to zari -->
+
+
+
       <div class="content-title">
         <h3>ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
