--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -18,48 +18,26 @@
         word-break: break-all;
       }
     </style> -->
-    <style>
-      #popupContainer {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 0.5); /* semi-transparent overlay */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 9999;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/components/popup-vote.css" />
   </head>
   <body>
+    <!-- add mo to zari -->
     <script src="/components/popup.js"></script>
-  
-    <div id="popupContainer">
-      <div class="popup-vote">
-        <img src="components/popup-checkmark.png" class="popup-img" />
-        <h2 class="popup-title">VOTE SUBMISSION<br />SUCCESSFUL</h2>
-        <p class="popup-info">Thank you for casting your vote! Your vote has been successfully recorded on the blockchain. Click 'Next' to view your voter transaction receipt.</p>
-        <button id="popupNextBtn">Next</button>
-      </div>
-    </div>
 
-    <!-- Popup hide functionality -->
     <script>
-      function hidePopup() {
-        var popupContainer = document.getElementById("popupContainer");
-        if (popupContainer) {
-          popupContainer.style.display = "none";
+      bigPopup(
+        "VOTE SUBMISSION<br />SUCCESSFUL",
+        "Thank you for casting your vote! Your vote has been successfully recorded on the blockchain. Click 'Next' to view your voter transaction receipt.",
+        {
+          imageSrc: "/components/popup-checkmark.png",
+          buttonText: "Next",
+          timeout: 7000
         }
-      }
+      );
 
-      // Automatically hide the popup after 5 seconds
-      setTimeout(hidePopup, 10000);
-
-      // Hide the popup immediately when "Next" is clicked
-      document.getElementById("popupNextBtn").addEventListener("click", hidePopup);
     </script>
+    <!-- add mo to zari -->
+
     <!-- Header (unchanged) -->
     <header class="header">
       <div class="header-logo">
